tests/machine/x/c/record_assign.error
exit status 1
/workspace/mochi/tests/machine/x/c/record_assign.c:25:9: error: unknown type name ‘Counter’; did you mean ‘counter_t’?
   25 | int inc(Counter *c) { c->n = c->n + 1; }
      |         ^~~~~~~
      |         counter_t
/workspace/mochi/tests/machine/x/c/record_assign.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/record_assign.c:28:18: error: ‘Counter’ undeclared (first use in this function); did you mean ‘counter_t’?
   28 |   counter_t c = (Counter){.n = 0};
      |                  ^~~~~~~
      |                  counter_t
/workspace/mochi/tests/machine/x/c/record_assign.c:28:18: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/record_assign.c:28:26: error: expected ‘,’ or ‘;’ before ‘{’ token
   28 |   counter_t c = (Counter){.n = 0};
      |                          ^
/workspace/mochi/tests/machine/x/c/record_assign.c:29:3: warning: implicit declaration of function ‘inc’ [-Wimplicit-function-declaration]
   29 |   inc(&c);
      |   ^~~
