tests/machine/x/c/record_assign.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Counter Counter;

typedef struct Counter {
  int n;
} Counter;
typedef struct {
  int len;
  counter_t *data;
} counter_list_t;
counter_list_t create_counter_list(int len) {
  counter_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(counter_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int inc(Counter *c) { c->n = c->n + 1; }

int _mochi_main() {
  counter_t c = (Counter){.n = 0};
  inc(&c);
  printf("%d\n", c.n);
  return 0;
}
int main() { return _mochi_main(); }
